compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__results__aliased_ok.snap
---
source: compiler-core/src/nix/tests/results.rs
expression: "import gleam.{Ok as Thing}\npub fn main() { Thing(1) }"
---
let
  mod''gleam = builtins.import ./../gleam.nix;
  Thing = (builtins.import ./../gleam.nix).Ok;
  
  main = {}: Thing 1;
in { inherit main; }
