compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__results__aliased_ok_fn.snap
---
source: compiler-core/src/nix/tests/results.rs
expression: "import gleam.{Ok as Thing}\npub fn main() { Thing }"
---
let
  mod''gleam = builtins.import ./../gleam.nix;
  Thing = (builtins.import ./../gleam.nix).Ok;
  
  main = {}: Thing;
in { inherit main; }
