compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__results__qualified_error.snap
---
source: compiler-core/src/nix/tests/results.rs
expression: "import gleam\npub fn main() { gleam.Error(1) }"
---
let
  mod''gleam = builtins.import ./../gleam.nix;
  
  main = {}: mod''gleam.Error 1;
in { inherit main; }
