compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__results__qualified_error_fn.snap
---
source: compiler-core/src/nix/tests/results.rs
expression: "import gleam\npub fn main() { gleam.Error }"
---
let
  mod''gleam = builtins.import ./../gleam.nix;
  
  main = {}: mod''gleam.Error;
in { inherit main; }
