compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__results__qualified_ok_fn.snap
---
source: compiler-core/src/nix/tests/results.rs
expression: "import gleam\npub fn main() { gleam.Ok }"
---
let
  mod''gleam = builtins.import ./../gleam.nix;
  
  main = {}: mod''gleam.Ok;
in { inherit main; }
